# Evolutionary-Optimisation

./: main.py  pyproject.toml
.circleci/: config.yml
evolution/: evolution.py  individual.py  population.py
fitness_score/: fitness_score.py
genotype/: genotype.py  genotype_data_model.py
phenotype/: abstract_phenotype.py  phenotype_data_model.py  phenotype_for_challenge.py  test_phenotype.py
