[tool.poetry]
name = "evolutionary-optimisation"
version = "1.0.0"
description = "A generic evolutionary algorithm for function optimisation."
authors = ["Marta <mswolinska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
Sphinx = "^5.0.2"
sphinx-autodoc-typehints = "^1.18.3"
myst-parser = "^0.18.0"
sphinx-copybutton = "^0.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
